RESOLVED FIXED 198094
Media controls don't show in WK2 video fullscreen sometimes
https://bugs.webkit.org/show_bug.cgi?id=198094
Summary Media controls don't show in WK2 video fullscreen sometimes
Jer Noble
Reported 2019-05-21 16:29:29 PDT
Media controls don't show in fullscreen sometimes
Attachments
Patch (1.70 KB, patch)
2019-05-21 16:39 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2019-05-21 16:31:14 PDT
Jer Noble
Comment 2 2019-05-21 16:39:36 PDT
WebKit Commit Bot
Comment 3 2019-05-21 22:37:23 PDT
Comment on attachment 370356 [details] Patch Clearing flags on attachment: 370356 Committed r245614: <https://trac.webkit.org/changeset/245614>
WebKit Commit Bot
Comment 4 2019-05-21 22:37:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.