Media controls don't show in WK2 video fullscreen sometimes https://bugs.webkit.org/show_bug.cgi?id=198094 <rdar://problem/50970661>

Reviewed by Tim Horton.

Ensure that the WebAVPlayerLayer never allows hit testing, as this keeps touches from reaching
AVKit's controls.

* platform/ios/VideoFullscreenInterfaceAVKit.mm:
(-[WebAVPlayerLayer init]):


Canonical link: https://commits.webkit.org/212185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245614 268f45cc-cd09-0410-ab3c-d52691b4dbfc