Source/WebCore/platform/ios/VideoFullscreenInterfaceAVKit.mm
@@ -44,6 +44,7 @@
 #import <objc/message.h>
 #import <objc/runtime.h>
 #import <pal/spi/cocoa/AVKitSPI.h>
+#import <pal/spi/cocoa/QuartzCoreSPI.h>
 #import <pal/spi/ios/UIKitSPI.h>
 #import <wtf/RetainPtr.h>
 #import <wtf/text/CString.h>
@@ -203,7 +204,8 @@ static VideoFullscreenInterfaceAVKit::ExitFullScreenReason convertToExitFullScre
 {
     self = [super init];
     if (self) {
-        [self setMasksToBounds:YES];
+        self.masksToBounds = YES;
+        self.allowsHitTesting = NO;
         _videoGravity = AVLayerVideoGravityResizeAspect;
     }
     return self;
